메인슬라이더가 끝남 ㅎㅎ

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </ul>
                 <div class="control-btn-wrap">
                   <div class="counter-wrap">
-                    <span class="current"></span> / <span class="total"></span>
+                    <span class="current">1</span> / <span class="total">2</span>
                   </div>
                   <div class="bar-wrap">
                     <i class="progress-bar"></i>
